<resources>
    <string name="app_name">Huis Energie Logger</string>

    <string name="action_login">Log in</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Instellingen</string>
    <string name="action_export">Exporteer</string>
    <string name="action_alarm">Alarm instellen</string>

    <string name="knop_update">Update</string>
    <string name="knop_delete">Verwijder</string>
    <string name="knop_populate">Data van web</string>
    <string name="dialog_tv_el_meter">Elektriciteit</string>
    <string name="dialog_tv_el_meter_ex">Elektriciteit (Export)</string>
    <string name="dialog_tv_ga_meter">Gas</string>
    <string name="dialog_tv_wa_meter">Water</string>
    <string name="dialog_tv_pv_meter">Zonnecellen Huis</string>
    <string name="dialog_tv_pv_meter2">Zonnecellen Garage</string>
    <string name="dialog_tv_tot_huis">Totaalverbruik huis</string>
    <string name="title_activity_settings">Instellingen</string>
    <string name="dialog_title">Geef meterstanden</string>
    <string name="btn_geefdatain">Geef data in</string>
    <string name="snackbar_delete">Tellergegevens verwijderd</string>
    <string name="snackbar_undo_delete">Tellergegevens hersteld</string>
    <string name="snackbar_undo">Verwijderen ongedaan maken</string>
    <string name="snackbar_update">Tellergegevens geupdate</string>
    <string name="snackbar_toegevoegd">Tellergegevens toegevoegd</string>
    <string name="snackbar_van_net">Gegevens van Raspberry toegevoegd</string>
    <string name="snackbar_van_net_fout">Gegevens konden niet worden ingelezen...</string>

    <string name="snackbar_export">Tellergegevens geëxporteerd naar...</string>
    <string name="snackbar_openfile">Open bestand</string>
    <string name="snacckbar_eindofrecycleviewer">Oudere gegevens ophalen.</string>


    <!-- Settings Titles: preferences -->
    <string name="pref_backup_header">Backup</string>
    <string name="pref_backup_selectie">Backup maken op dit toestel</string>
    <string name="pref_version_header">Versie</string>

    <string name="pref_datadownload_header">Tellergegevens downloaden</string>
    <string name="pref_datadownload_selectie">Download alle tellergegevens</string>
    <string name="pref_datadownload_uitleg_on">Download alle data uit de database (nodig voor export, herstart van de app nodig).</string>
    <string name="pref_datadownload_uitleg_off">De gedownloade data wordt beperkt.</string>

    <string name="pref_url_category_title">App informatie</string>
    <string name="pref_url_title">Meer informatie</string>
    <string name="pref_url_summary">Klik op deze link voor meer informatie rond deze app.</string>
    <string name="pref_url_data">https://barthuyck.github.io/HuisEnergieLogger/</string>

    <!-- Backup Preferences -->

    <!-- <string name="reply_title">Default reply action</string> -->

    <!-- Sync Preferences -->
    <!-- <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string> -->
</resources>
