<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        android:id="@+id/cardviewkaart">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cardlayout">

            <TextView
                android:id="@+id/tvdatum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="2dp"
                android:textAlignment="center"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_itemview_nutslogger"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdatum"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvel"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_tv_el_meter"
                android:drawableBottom="@drawable/ic_flash"
                android:drawableTint="#FFEB3B"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdatum" />

            <TextView
                android:id="@+id/tvgas"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_tv_ga_meter"
                android:drawableTop="@drawable/ic_gas"
                android:drawableTint="#F44336"
                android:gravity="right"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:id="@+id/tvwater"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_tv_wa_meter"
                android:drawableTop="@drawable/ic_drop"
                android:drawableTint="#03A9F4"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/tvpv"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_tv_pv_meter"
                android:drawableBottom="@drawable/ic_sun_energy"
                android:drawableTint="#4CAF50"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvdatum" />

            <TextView
                android:id="@+id/tvhuis"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dialog_tv_tot_huis"
                android:drawableLeft="@drawable/ic_chevron_right_black_24dp"
                android:drawableTop="@drawable/ic_huis"
                android:drawableRight="@drawable/ic_chevron_left_black_24dp"
                android:drawableTint="#FF9800"
                android:padding="2dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/tvel"
                app:layout_constraintStart_toEndOf="@+id/tvpv"
                app:layout_constraintTop_toBottomOf="@+id/tvdatum" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>